--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -4,6 +4,7 @@
 /* This file prefixes all rules with the theme name to avoid causing conflicts with other themes. */
 /* The actual styles should be defined in mytheme.scss */
 .mytheme {
+  /* Here my custom theme*/
   @include addons;
 
   // Include mytheme theme styles in your theme
